--- a/templates/login.pug
+++ b/templates/login.pug
@@ -103,6 +103,6 @@ html
         p 加入Connect發起活動與專案，
         p 讓你找到同伴一起完成你想做的事!
     
-    script(src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.js")
+    script(src="{% static 'js/semantic.min.js' %}")
     script(src="{% static 'js/login.js' %}")
     script(src="{% static 'js/navbar.js' %}")
