--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -177,7 +177,7 @@ html
             .comment-operate-region
               input.eventmsg-insert(type="text", name='text', placeholder="傳送訊息...")
               input.eventmsg-btn(type="button", value="送出")
-              input.eventjoin-btn(type="button", value="加入團隊")
+              input.eventjoin-btn(type="button", value="申請加入")
               script.
                 $(document).ready(function(){
                   $(".eventmsg-btn").on("click", function() {
