--- a/templates/profile.pug
+++ b/templates/profile.pug
@@ -193,7 +193,8 @@ html
                     });
                   })
                 {% endif %}
-                
+                           
+        #graph(style="display: none")
         
         #bottom-region
           #left-pane
@@ -444,8 +445,7 @@ html
               {% endfor %}
 
               // so many cards (use for to solve it after the backend has constructed)
-                              
-      #graph
+                   
       footer
         {% include "footer.pug" %}
 
