--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -823,7 +823,7 @@ footer
       background-color: var(--background-color-filiter)
     input[type=text]:focus
       border: 2px solid var(--border-color-focus)
-    input[type=date]
+    input#id_event_date, input#id_due_date
       border-radius: 2.5rem
       margin-bottom: 0.7rem
       height: 2rem
