add comment form UI

--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -491,7 +491,8 @@ footer
         background-color: white
         border: solid #FFAD94 0.1rem
         border-radius: 0.8rem
-        z-index: 1
+        z-index: 10
+        width: 30rem
         .info-brief
           display: flex
           flex-direction: row
@@ -1137,6 +1138,11 @@ footer
     #bottom-region
       flex-direction: column;
       align-items: center;
+    #left-pane
+      width: auto
+      margin-bottom: 2rem
+    #right-pane
+      width: auto
     
 
 @media only screen and (max-width: 450px)
