--- a/templates/event_detail.pug
+++ b/templates/event_detail.pug
@@ -2,6 +2,7 @@
 {% if event_detail.host %}
 {% load sass_tags %}
 link(href="{% sass_src 'sass/event_detail.sass' %}",rel="stylesheet",type="text/css")
+link(href="{% sass_src 'sass/variable.sass' %}",rel="stylesheet",type="text/css")
 #eventwindow
   #eventwindow-left
     #description
