--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -9,6 +9,7 @@ html
     {% load sass_tags %}
     link(href="{% sass_src 'sass/homepage.sass' %}",rel="stylesheet",type="text/css")
     link(href="{% sass_src 'sass/navbar.sass' %}",rel="stylesheet",type="text/css")
+    link(href="{% sass_src 'sass/variable.sass' %}",rel="stylesheet",type="text/css")
     script(src="{% static 'js/jquery.min.js' %}")
     //script(src="https://d3js.org/d3.v3.js")
     //script(src="https://d3js.org/d3.v4.js")
