--- a/templates/navbar.pug
+++ b/templates/navbar.pug
@@ -3,6 +3,7 @@
 {% url 'home' as home_url %}
 {% load static %}
 link(href="{% sass_src 'sass/navbar.sass' %}",rel="stylesheet",type="text/css")  
+link(href="{% sass_src 'sass/variable.sass' %}",rel="stylesheet",type="text/css")
 header
   #navbar
     //#loadingfilter
