--- a/templates/profile.pug
+++ b/templates/profile.pug
@@ -9,6 +9,7 @@ html
     {% load sass_tags %}
     link(href="{% sass_src 'sass/profile.sass' %}",rel="stylesheet",type="text/css")
     link(href="{% sass_src 'sass/navbar.sass' %}",rel="stylesheet",type="text/css")
+    link(href="{% sass_src 'sass/variable.sass' %}",rel="stylesheet",type="text/css")
     script(src="{% static 'js/d3.v5.js' %}")
     script(src="{% static 'js/jquery-3.2.1.min.js' %}")
     script(src="{% static 'js/jquery-ui.js' %}")
