--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -121,7 +121,7 @@ footer
           width: 13vw
           height: 13vw
           border-radius: 50%
-          background-color: var(--background-color-frames)
+          background-color: var(--background-color-userpic)
           opacity: 0.7
           text-align: center
           font-size: 1.3vw
@@ -147,7 +147,7 @@ footer
         border-radius: 50%
         //border: solid 0.3vw
         //border-color: var(--border-color-frame)
-        background-color: var(--background-color-description)
+        background-color: var(--background-color-userpic)
         margin-bottom: 0.5vh
       #user-name
         font-size: 1.7rem
@@ -172,7 +172,7 @@ footer
           border: none
           padding: 0.3rem 0 0.3rem 1rem
 
-          background-color: var(--background-color-description)
+          background-color: var(--background-color-inut)
         input::placeholder
           font-size: 0.8rem
     
@@ -183,7 +183,7 @@ footer
       
       
       #description-background
-        background-color: var(--background-color-description)
+        background-color: var(--background-color-freind)
         //border: solid 2px
         border-radius: 1.3rem
         //border-color: #3AEDC2
@@ -207,7 +207,7 @@ footer
           color: black
       
       .tag-field
-        background-color: var(--background-color-description)
+        background-color: var(--background-color-freind)
         border-radius: 1.5rem
         margin-bottom: 0.5rem
         padding: 0.5rem
@@ -230,7 +230,7 @@ footer
           margin: 0
           padding: 0.3rem 0
           font-weight: 900
-          color: var(--background-color-buttons)
+          color: var(--background-color-button)
           
         .tag-style
           position: relative
@@ -275,7 +275,7 @@ footer
                 background-color: var(--background-color-description)
 
             #tag-comment-board
-              background-color: var(--background-color-description)
+              background-color: var(--background-color-userpic)
               margin: 0rem 1rem 1rem 1rem
               border-radius: 0.75rem
 
@@ -340,8 +340,8 @@ footer
           margin: 0.5rem 0 0 0.7rem
           float: right
           border: solid 2px
-          background-color: var(--background-color-buttons)
-          border-color: var(--border-color-buttons)
+          background-color: var(--background-color-button2)
+          border-color: var(--border-color-button2)
           cursor: pointer
         *:hover
           background-color: #FFDFDF
@@ -692,7 +692,7 @@ footer
               .comment-right
                 position: relative
                 display: flex
-                background-color: var(--background-color-comment)
+                background-color: var(--background-color-input)
                 padding: 0 0.5rem 0.7rem 0.5rem
                 border-radius: 1rem
                 margin-top: 0.5rem
