--- a/static/sass/variable.sass
+++ b/static/sass/variable.sass
@@ -1,71 +1,74 @@
 \:root
+  //
+    gobal
 
-//all
+  --font-family-header: "Noto Sans TC", "Tahoma", "Arial"
+  --font-style-header: normal
+  --font-family-text: "Noto Sans TC", "Tahoma", "Arial"
+  --font-style-text: normal
+  --font-family-card: "Noto Sans TC", "Tahoma", "Arial"
+
+  --fontcolor-reverse: #000000
+  --fontcolor-main:  #000000
+  --fontcolor-second: #828282  
+
+  --fontcolor-placeholder: #B9B9B9
+  --fontcolor-placeholder-hover: #EFFFFB
+
   --background-color: #FFF6ED
   --background-color-navbar: #FFAD94
-  --background-color-input: #FFE4DC
+  --background-color-userpic: #FFFFFF
 
-  --fontcolor-navbarbuttons: #000000
-  --fontcolor-main:  #000000
-  --fontcolor-second: #828282
-  
+  --background-color-button: #75E1C7
+  --background-color-button-hover: #85F5DA
+  --background-color-button-disable: #2CBD9A
 
-  --font-family-header: "Noto Sans TC", "Tahoma", "Arial"
-  --font-style-header: normal
-  --font-family-text: "Noto Sans TC", "Tahoma", "Arial"
-  --font-style-text: normal
-  --font-family-card: "Noto Sans TC", "Tahoma", "Arial"
+  --border-color-userpic: #888888
+  --boxshadow-color: rgba(0, 0, 0, 0.25)
 
+  //
+    navbar
 
-//homepage
-  --background-color-card: #FFC5B2
-  --background-color-box: #FFFFFF
-  --background-color-filiter: #EEEEEE
-  --background-color-eventwindow: #F5FBFE
-  --background-color-filiter2: #EFFFFB
-  --background-color-create: #F5FBFE
-  --background-color-buttons: #32DEB5
-  --background-color-buttons-hover: #9FE4D4
+  --fontcolor-navbarbutton: #000000
+  --background-color-searchbar: #FFE4DC
 
-  --border-color-box: #FFE4DC
+  //
+    homepage
+
+  --background-color-container: #FFFFFF
+  --background-color-card: #FFAD94
+  --background-color-inut: #F2F2F2
+  --background-color-input-hover: #EFFFFB
+
+  --background-color-eventwindow: #75E1C7
+  --background-color-eventwindow-board: #FFFFFF
+ 
+  --border-color-container: #FFE4DC
   --border-color-eventwindow: #75E1C7
-  --border-color-participate: #CCCCCC
-  --border-color-create: #FFAD94
-  --border-color-focus: #B9B9B9
-  
-  --fontcolor-before: #888888
-  --fontcolor-hover: #666666
-  --fontcolor-complement: #777777
-  --fontcolor-subtitle: #333333
+  --border-color-input-focus: #BDBDBD
 
-  --box-shadow-color: rgba(0, 0, 0, 0.25)
-
-  --font-family-header: "Noto Sans TC", "Tahoma", "Arial"
-  --font-style-header: normal
-  --font-family-text: "Noto Sans TC", "Tahoma", "Arial"
-  --font-style-text: normal
-  --font-family-card: "Noto Sans TC", "Tahoma", "Arial"
-
-//profile
+  //
+    pofile
 
   --background-color-intro: #FFE4DC
   --background-color-freind: #FFFFFF
   --background-color-event: #FFE4DC
-
   --background-color-activity: #FFFFFF
 
-  --background-color-buttons: #FDF2EF
   --background-color-tag1: #FFCFBF
+  --background-color-tag1-hover: 
   --background-color-tag2: #75E1C7
+  --background-color-tag2-hover: 
+  --background-color-tag3: 
+  --background-color-tag3-hover: 
 
-  --background-color-description: #FFFFFF
-  --background-color-comment: #EFFFFB
-  --background-color-frames: #FFFFFF
-  
+  --background-color-button2: #FDF2EF
+  --background-color-button-hover2: #FFC5B2
+  --background-color-button-disable2: #CA8E7C
+
+
   --border-color-frame: #FFE4DC
-  
-  --border-color-buttons: #FFAD94
   --border-color-tag1: #FFCFBF
   --border-color-tag2: #75E1C7
-
-  --background-color-button2: #FFE4DC
+  --border-color-tag3: 
+  --border-color-button2: #FFAD94
