fix cccc merge error, revert that merge

--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -1121,6 +1121,11 @@ footer
     #bottom-region
       flex-direction: column;
       align-items: center;
+    #left-pane
+      width: auto
+      margin-bottom: 2rem
+    #right-pane
+      width: auto
     
 
 @media only screen and (max-width: 450px)
