--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -719,8 +719,63 @@ footer
           display: block
           //width: 70%
 
+#comment-window
+  position: fixed
+  display: flex
+  flex-direction: column
+  transform: translate(-50%, -50%)
+  top: 55%
+  left: 50%
+  width: 40%
+  padding: 3% 0
+  background-color: var(--background-color-create)
+  border-radius: 3rem
+  border: 0.2rem solid var(--border-color-create)
+  box-shadow: 10px 10px 25px 5px var(--box-shadow-color)
+  opacity: 0
+  z-index: 8
+      
+  #exitbtn2
+    position: absolute
+    transform: translate(-50%, 0)
+    top: 1.5rem
+    right: 1rem
+    width: 1.5rem
+    height: auto
+  p
+    margin-left: 1.5rem
+    font-size: 1.1rem
+    font-weight: 700
+  .comment-div
+    display: flex
+    margin: 1rem
+    justify-content: space-between
+    align-items: center
+    flex-wrap: wrap
+    p
+      font-size: 1rem
+      font-weight: 500
+    input
+      width: 70%
+      height: 1rem
+      border-radius: 1vw
+      padding: 0.5rem 1rem 
+      background-color: var(--background-color-filiter)
+      border: none
+      outline: none
+      margin-left: 1rem
+  #first-comment
+    margin-top: 2.5rem
+  input[type=button]
+    width: 15%
+    margin: 2.5rem auto 0 auto
+    border-radius: 1vw
+    outline: none
+    border: none
+    padding: 0.5rem 0
+    background-color: #32DEB5
+
 #eventcreatewindow
-  //display: none
   position: fixed
   transform: translate(-50%, -50%)
   top: 55%
@@ -794,7 +849,7 @@ footer
       background-color: var(--background-color-inut)
     input[type=text]:focus
       border: 2px solid var(--border-color-input-focus)
-    input[type=date]
+    input#id_event_date, input#id_due_date
       border-radius: 2.5rem
       margin-bottom: 0.7rem
       height: 2rem
