--- a/static/sass/variable.sass
+++ b/static/sass/variable.sass
@@ -55,12 +55,12 @@
   --background-color-event: #FFE4DC
   --background-color-activity: #FFFFFF
 
-  --background-color-tag1: #FFCFBF
-  --background-color-tag1-hover: 
-  --background-color-tag2: #75E1C7
-  --background-color-tag2-hover: 
-  --background-color-tag3: 
-  --background-color-tag3-hover: 
+  --background-color-tag1: #FFCFBF        //橘色
+  --background-color-tag1-hover: #FFC5B3
+  --background-color-tag2: #75E1C7        //綠色
+  --background-color-tag2-hover: #85F5DA
+  //--background-color-tag3:
+  //--background-color-tag3-hover:
 
   --background-color-button2: #FDF2EF
   --background-color-button-hover2: #FFC5B2
@@ -70,5 +70,5 @@
   --border-color-frame: #FFE4DC
   --border-color-tag1: #FFCFBF
   --border-color-tag2: #75E1C7
-  --border-color-tag3: 
+  //--border-color-tag3:
   --border-color-button2: #FFAD94
