fix homepage comment window bg color, window didnt hide prob

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -728,10 +728,10 @@ footer
   left: 50%
   width: 40%
   padding: 3% 0
-  background-color: var(--background-color-create)
+  background-color: var(--background-color-eventwindow-board)
   border-radius: 3rem
-  border: 0.2rem solid var(--border-color-create)
-  box-shadow: 10px 10px 25px 5px var(--box-shadow-color)
+  border: 0.2rem solid var(--background-color-eventwindow)
+  box-shadow: 10px 10px 25px 5px var(--boxshadow-color)
   opacity: 0
   z-index: 8
       
