complete comment system

--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -118,7 +118,6 @@ html
     {% load static %}
     image#gotop(src="{% static 'file/gotop.png' %}")
     {% if request.user.is_authenticated %}
-    #filter1 
     #need-comment-flag(style="display: none") {{ need_comment }}
     #comment-window
       img#exitbtn2(src="{% static 'file/exiticon.png' %}")
@@ -126,15 +125,26 @@ html
       p 來為活動和參加者評分吧！
       #first-comment.comment-div
         p 給 {{ need_comment_event.host.full_name }} 的評語
-        label(for="{{ need_comment_event.host.full_name }}", style="display: none")
+        label(for="{{ need_comment_event.host.full_name }}", style="display: none") {{ need_comment_event.host.full_name }}
         input(type="text", placeholder="留言.......", name="{{ need_comment_event.host.full_name }}")
-      {% for participant in need_comment_event.participant.all %}
+      {% for participant in need_comment_event.participants.all %}
+      {% if participant.full_name != request.user.userextend.full_name %}
       .comment-div
         p 給 {{ participant.full_name }} 的評語
-        label(for="{{ participant.full_name }}", style="display: none")
+        label(for="{{ participant.full_name }}", style="display: none") {{ participant.full_name }}
         input(type="text", placeholder="留言.......", name="{{ participant.full_name }}")
+      {% endif %}
       {% endfor %}
       input#send-comment-btn(type="button", value="送出")
+      script.
+        $(document).ready(function(){
+          $("#send-comment-btn").on("click", function() {
+            rate_event_handler(
+              "{% url 'rate_event' %}",
+              "{{ need_comment_event.pk }}", 
+              "{{ csrf_token }}");
+          })
+        })
 
 
     #filter1
