--- a/templates/profile.pug
+++ b/templates/profile.pug
@@ -306,13 +306,15 @@ html
                   .info
                     a(href="{% url 'profile_event' id=user.pk event_id=activity.pk%}")
                       p#activity-title.cardinfott {{ activity.title }}
-                    {% if activity.comments.count > 0 %}
-                    p#activity-rate.rate {{ activity.get_avg_rating }}/10★
-                    {% endif %}
+                    {% if activity.host.pk == user.pk %}
                     p#activity-character.charname 主辦人
+                    {% else %}
+                    p#activity-character.charname 參與者
+                    {% endif %}
                 
                   #activity-comment.comments
-                    {% for comment in activity.comments.all%}
+                    {% for comment in activity.event_comments.all reversed%}
+                    {% if comment.for_user.id == user.id %}
                     .comment
                       {% load static %}
                       a(href="{% url 'profile' id=comment.author.pk %}")
@@ -320,20 +322,13 @@ html
                       .comment-right
                         a(href="{% url 'profile' id=comment.author.pk %}") {{ comment.author.full_name }}
                         p#participant-comment {{ comment.text }}
-                        p#participant-rate {{ comment.rate }}/10★
+                    {% endif %}
                     {% empty %}
                     .comment
                       .comment-right
                         #participant-comment
                           p 這個活動好像還沒有評論
                     {% endfor %}
-                  .eventcomment-insert
-                    input.comment-text(type='text')
-                    input.comment-rate(type='number', min=1, max=10)
-                    input.send-comment(type='button', value='送出')
-                    //- store event id here, not disply
-                    .event-id(style='display:none') {{ activity.id }}
-                    .comment-count(style='display:none') //這會error我先拿掉{嗨{ activity.number_of_comments }}
               {% empty %}
               #activity-card.card
                 p.hint(style="color: #E98C6F") 看來他好像還沒參加過活動喔
@@ -353,10 +348,6 @@ html
                     )
                   });
                 })
-
-              // so many comments
-
-              // so many cards (use for to solve it after the backend has constructed)
             
             #projects.page-panel(style="display: none")
               {% for project in projects %}
@@ -386,13 +377,14 @@ html
                   .info
                     a(href="{% url 'profile_event' id=user.pk event_id=project.pk%}")
                       p#project-title.cardinfott {{ project.title }}
-                    {% if projects.comments.count > 0 %}
-                    p#projects-rate.rate {{ project.get_avg_rating }}★
-                    {% endif %}
+                    {% if activity.host.pk == user.pk %}
                     p#projects-character.charname 主辦人
+                    {% else %}
+                    p#projects-character.charname 參與者
+                    {% endif %}
                 
                   #projects-comment.comments
-                    {% for comment in project.comments.all reversed %}
+                    {% for comment in project.event_comments.all reversed %}
                     .comment
                       {% load static %}
                       a(href="{% url 'profile' id=comment.author.pk %}")
@@ -401,24 +393,19 @@ html
                         a(href="{% url 'profile' id=comment.author.pk %}") {{ comment.author.full_name }}
                           //p#participant-name {{ comment.author.full_name }}
                         p#participant-comment {{ comment.text }}
-                        p#participant-rate {{ comment.rate }}★
                     {% empty %}
                     .comment
                       .comment-right
                         #participant-comment
                           p 這個活動好像還沒有評論
-                    {% endfor %}
-                    
-                
+                    {% endfor %}           
 
               {% empty %}
               #activity-card.card
                 p.hint(style="color: #E98C6F") 看來他好像還沒參與過專案
               {% endfor %}
                     
-              // so many comments
 
-              // so many cards (use for to solve it after the backend has constructed)
 
             #personal.page-panel(style="display: none")
               {% for personal_proj in personal_projs %}
@@ -451,8 +438,6 @@ html
               #activity-card.card
                 p.hint(style="color: #E98C6F") 看來他好像還沒新增過個人專案
               {% endfor %}
-
-              // so many cards (use for to solve it after the backend has constructed)
                    
       footer
         {% include "footer.pug" %}
